Fix battery indicator

--- a/ui/public/css/base.less
+++ b/ui/public/css/base.less
@@ -499,3 +499,12 @@ body {
 .status-indicator--warning {
     animation: blink infinite alternate 300ms 0 ease-in-out;
 }
+
+.battery-indicator {
+    display: inline-block;
+    color: white;
+    z-index: 1;
+    position: relative;
+    margin-right: 10px;
+    margin-left: 10px;
+}
